# pwn_gpt

./: README.md  main.py  pyproject.toml  requirements.txt
pwn_hacking_tool/: __init__.py  adapters.py  cli.py  context.py  detectors.py  gpt_adapter.py  gui.py  hints.py  report.py  reporting.py  scoring.py  synthesizer.py  utils.py  validators.py
pwn_hacking_tool/extractors/: callgraph.py  fingerprint.py  got.py  imports.py  input_surface.py  protections.py  stack.py  strings.py  toolchain.py
